Refactor all JUnit 4 to JUnit 5 tests.
Squashed commit of the following:

commit 5ae7c242b6454539c4393391c05b7e9a5f8259d8
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 08:31:08 2025 +1200

    Fix broken tests.

commit d2a184798852fde085e0ac4473b3630166409bbd
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 08:13:49 2025 +1200

    Simplifications.

commit 12571eef27b4223323f4d865512d3096863b6b41
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 08:03:26 2025 +1200

    Fix compiler warnings.

commit 97db2b2da03ef11519a0631faa6e4dcd0462b8b0
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 08:00:20 2025 +1200

    Fix compiler warnings.

commit 798f6ec127b7a8c6b5fa496330ef99dde5a47438
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:58:50 2025 +1200

    Fix broken test.

commit f073626f1b4efa8345b73a85df3d06c04f41097c
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:58:33 2025 +1200

    Allow Junit 4 dep because okhttp mock server requires it.

commit 65c59171ea3da4c2a965f9603c8d5c7d373f8e9c
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:52:06 2025 +1200

    Work on porting to JUnit 5.

commit 40012b759790aabd167a27ab2a9bfe29d1d38bf5
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:51:33 2025 +1200

    Work on porting to JUnit 5.

commit e7ae214a381ad4784fccd29186eb83e7a1e57ace
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:23:05 2025 +1200

    Work on porting to JUnit 5.

commit 9dc88b904c275a1efdf05de9ffb29e57c239964e
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Sat May 24 07:14:33 2025 +1200

    Work on porting to JUnit 5.

commit 7b03012d15f4cced101e5046f0e634de26ba9ec8
Author: Matt Magoffin <matt@solarnetwork.net>
Date:   Fri May 23 18:12:33 2025 +1200

    Start work on porting to JUnit 5.

commit 3902e20300c1f54436f04d41b607f32e519eb491
Author: Matt Magoffin <matt@solarnetwork.net>
D