@@ -22,10 +22,8 @@
 
 package net.solarnetwork.central.user.dao.mybatis.test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.BDDAssertions.from;
+import static org.assertj.core.api.BDDAssertions.then;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.HashMap;
@@ -82,7 +80,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		newUser.setEnabled(Boolean.TRUE);
 		Long id = userDao.save(newUser);
 		log.debug("Got new user PK: " + id);
-		assertNotNull(id);
+		then(id).isNotNull();
 		userId = id;
 	}
 
@@ -93,14 +91,18 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 	public void getByPrimaryKey() {
 		storeNewUser();
 		User user = userDao.get(this.userId);
-		assertNotNull(user);
-		assertEquals(this.userId, user.getId());
-		assertEquals(TEST_NAME, user.getName());
-		assertEquals(TEST_PASSWORD, user.getPassword());
-		assertEquals(TEST_EMAIL, user.getEmail());
-		assertNotNull(user.getEnabled());
-		assertTrue(user.getEnabled());
-		assertNotNull(user.getCreated());
+		// @formatter:off
+		then(user)
+			.isNotNull()
+			.returns(userId, from(User::getId))
+			.returns(TEST_NAME, from(User::getName))
+			.returns(TEST_PASSWORD, from(User::getPassword))
+			.returns(TEST_EMAIL, from(User::getEmail))
+			.returns(true, from(User::getEnabled))
+			.extracting(User::getCreated)
+			.isNotNull()
+			;
+		// @formatter:on
 	}
 
 	/**
@@ -116,16 +118,19 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		user.setEmail("New Email");
 		user.setEnabled(Boolean.FALSE);
 		Long id = userDao.save(user);
-		assertNotNull(id);
-		assertEquals(this.userId, id);
+		then(id).isNotNull().isEqualTo(userId);
 		User updatedUser = userDao.get(id);
-		assertNotNull(updatedUser);
-		assertEquals(this.userId, updatedUser.getId());
-		assertEquals(user.getEmail(), updatedUser.getEmail());
-		assertEquals(user.getName(), updatedUser.getName());
-		assertEquals(user.getPassword(), updatedUser.getPassword());
-		assertEquals(user.getEnabled(), updatedUser.getEnabled());
-		assertEquals(created, updatedUser.getCreated());
+		// @formatter:off
+		then(updatedUser)
+			.isNotNull()
+			.returns(userId, from(User::getId))
+			.returns(user.getName(), from(User::getName))
+			.returns(user.getPassword(), from(User::getPassword))
+			.returns(user.getEmail(), from(User::getEmail))
+			.returns(user.getEnabled(), from(User::getEnabled))
+			.returns(created, from(User::getCreated))
+			;
+		// @formatter:on
 	}
 
 	@Test
@@ -134,10 +139,10 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		User user = userDao.get(this.userId);
 		user.putInternalDataValue("bim", "bam");
 		Long userId = userDao.save(user);
-		assertEquals(user.getId(), userId);
+		then(userId).isEqualTo(user.getId());
 		User updated = userDao.get(user.getId());
-		assertEquals("Intenral data not changed by update", Collections.singletonMap("foo", "bar"),
-				updated.getInternalData());
+		then(updated.getInternalData()).as("Intenral data not changed by update")
+				.isEqualTo(Map.of("foo", "bar"));
 	}
 
 	/**
@@ -160,9 +165,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		storeRole();
 		User user = userDao.get(this.userId);
 		Set<String> roles = userDao.getUserRoles(user);
-		assertNotNull(roles);
-		assertEquals(1, roles.size());
-		assertEquals(TEST_ROLE_1, roles.iterator().next());
+		then(roles).isNotNull().containsExactly(TEST_ROLE_1);
 	}
 
 	/**
@@ -186,10 +189,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		storeRoles();
 		User user = userDao.get(this.userId);
 		Set<String> roles = userDao.getUserRoles(user);
-		assertNotNull(roles);
-		assertEquals(2, roles.size());
-		assertTrue(roles.contains(TEST_ROLE_1));
-		assertTrue(roles.contains(TEST_ROLE_2));
+		then(roles).isNotNull().containsExactlyInAnyOrder(TEST_ROLE_1, TEST_ROLE_2);
 	}
 
 	@Test
@@ -199,21 +199,25 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		User user = userDao.get(this.userId);
 		user.setLocationId(TEST_LOC_ID);
 		Long id = userDao.save(user);
-		assertEquals(this.userId, id);
+		then(id).isEqualTo(this.userId);
 
 		Map<String, Object> data = Collections.singletonMap("bim", (Object) "bam");
 		userDao.storeInternalData(id, data);
 
 		User updatedUser = userDao.get(id);
-		assertNotNull(updatedUser);
-		assertEquals(this.userId, updatedUser.getId());
-		assertEquals(user.getEmail(), updatedUser.getEmail());
-		assertEquals(user.getName(), updatedUser.getName());
-		assertEquals(user.getPassword(), updatedUser.getPassword());
-		assertEquals(user.getEnabled(), updatedUser.getEnabled());
-		assertEquals(TEST_LOC_ID, updatedUser.getLocationId());
-
-		assertEquals(data, updatedUser.getInternalData());
+		// @formatter:off
+		then(updatedUser)
+			.isNotNull()
+			.returns(userId, from(User::getId))
+			.returns(user.getName(), from(User::getName))
+			.returns(user.getPassword(), from(User::getPassword))
+			.returns(user.getEmail(), from(User::getEmail))
+			.returns(user.getEnabled(), from(User::getEnabled))
+			.returns(user.getCreated(), from(User::getCreated))
+			.returns(TEST_LOC_ID, from(User::getLocationId))
+			.returns(data, from(User::getInternalData))
+			;
+		// @formatter:on
 	}
 
 	private Long storeTestUser(String email) {
@@ -235,11 +239,9 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		criteria.setEmail(TEST_EMAIL);
 
 		FilterResults<UserFilterMatch, Long> results = userDao.findFiltered(criteria, null, null, null);
-		assertNotNull(results);
-		assertEquals(1L, (long) results.getTotalResults());
-		assertEquals(1, results.getReturnedResultCount());
-		UserFilterMatch match = results.getResults().iterator().next();
-		assertEquals("Match ID", userId, match.getId());
+		then(results.getTotalResults()).isEqualTo(1L);
+		then(results.getReturnedResultCount()).isEqualTo(1);
+		then(results).first().returns(userId, from(UserFilterMatch::getId));
 	}
 
 	@Test
@@ -260,19 +262,15 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		criteria.setInternalData(billingData1);
 
 		FilterResults<UserFilterMatch, Long> results = userDao.findFiltered(criteria, null, null, null);
-		assertNotNull(results);
-		assertEquals(1L, (long) results.getTotalResults());
-		assertEquals(1, results.getReturnedResultCount());
-		UserFilterMatch match = results.getResults().iterator().next();
-		assertEquals("Match ID", userId, match.getId());
+		then(results.getTotalResults()).isEqualTo(1L);
+		then(results.getReturnedResultCount()).isEqualTo(1);
+		then(results).first().returns(userId, from(UserFilterMatch::getId));
 
 		criteria.setInternalData(billingData2);
 		results = userDao.findFiltered(criteria, null, null, null);
-		assertNotNull(results);
-		assertEquals(1L, (long) results.getTotalResults());
-		assertEquals(1, results.getReturnedResultCount());
-		match = results.getResults().iterator().next();
-		assertEquals("Match ID", userId2, match.getId());
+		then(results.getTotalResults()).isEqualTo(1L);
+		then(results.getReturnedResultCount()).isEqualTo(1);
+		then(results).first().returns(userId2, from(UserFilterMatch::getId));
 	}
 
 	@Test
@@ -283,7 +281,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		userDao.storeInternalData(userId, data);
 
 		User user = userDao.get(userId);
-		assertEquals("Internal data", data, user.getInternalData());
+		then(user.getInternalData()).as("Internal data").isEqualTo(data);
 	}
 
 	@Test
@@ -297,7 +295,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		User updated = userDao.get(userId);
 		Map<String, Object> expected = new HashMap<String, Object>(user.getInternalData());
 		expected.put("bim", "bam");
-		assertEquals("Internal data updated", expected, updated.getInternalData());
+		then(updated.getInternalData()).as("Internal data updated").isEqualTo(expected);
 	}
 
 	@Test
@@ -309,7 +307,7 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		userDao.storeInternalData(user.getId(), billingData);
 
 		User updated = userDao.get(userId);
-		assertEquals("Internal data updated", billingData, updated.getInternalData());
+		then(updated.getInternalData()).as("Internal data updated").isEqualTo(billingData);
 	}
 
 	@Test
@@ -320,21 +318,21 @@ public class MyBatisUserDaoTests extends AbstractMyBatisUserDaoTestSupport {
 		userDao.storeInternalData(userId, billingData);
 
 		User updated = userDao.get(userId);
-		assertEquals("Internal data updated", Collections.emptyMap(), updated.getInternalData());
+		then(updated.getInternalData()).as("Internal data updated").isEqualTo(Map.of());
 	}
 
 	@Test
 	public void getInternalPropertiesNull() {
 		storeNewUser();
 		Map<String, Object> result = userDao.getInternalData(userId);
-		assertNull(result);
+		then(result).isNull();
 	}
 
 	@Test
 	public void getInternalProperties() {
 		storeInternalPropertyNullColumn();
 		Map<String, Object> result = userDao.getInternalData(userId);
-		assertEquals(Collections.singletonMap("foo", (Object) "bar"), result);
+		then(result).isEqualTo(Map.of("foo", "bar"));
 	}
 
 }
